--- a/pyproject.toml
+++ b/pyproject.toml
@@ -105,6 +105,7 @@ classifiers = [  # Optional
 # https://packaging.python.org/discussions/install-requires-vs-requirements/
 dependencies = [ # Optional
   "sphinx-copybutton",
+  "ipykernel",
   "pandas",
   "ipyvuetify",
   "ipytree",
