--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,17 @@
 
 include vois/*.py
 include vois/vuetify/*.py
-include vois/vuetify/extra/*
-include vois/JEOlab/*
-include vois/data/*
+include vois/vuetify/extra/*.py
+include vois/vuetify/extra/*.vue
+
+recursive-exclude vois *.ipynb
+recursive-exclude vois *.xml
+recursive-exclude vois *.geojson
+
+prune __pycache__
+prune */__pycache__ 
+recursive-exclude */__pycache__ *
+
+prune .ipynb_checkpoints
+prune */.ipynb_checkpoints 
+recursive-exclude */.ipynb_checkpoints *
