--- a/pyproject.toml
+++ b/pyproject.toml
@@ -104,6 +104,11 @@ classifiers = [  # Optional
 # For an analysis of this field vs pip's requirements files see:
 # https://packaging.python.org/discussions/install-requires-vs-requirements/
 dependencies = [ # Optional
+  "Pillow >= 9.4.0",
+  "traitlets >= 5.9.0",
+  "ipywidgets >= 8.0.0",
+  "requests >= 2.28.0",
+  "urllib3 >= 1.26.0",
   "sphinx-copybutton",
   "ipykernel",
   "pandas",
