--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,6 @@
 [project]
+# Created following this tutorial: https://realpython.com/pypi-publish-python-package/
+#
 # This is the name of your project. The first time you publish this
 # package, this name will be registered for you. It will determine how
 # users can install this project, e.g.:
@@ -82,7 +84,7 @@ classifiers = [  # Optional
   "Topic :: Software Development :: Build Tools",
 
   # Pick your license as you wish
-  "License :: OSI Approved :: EUPL License",
+  "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
 
   # Specify the Python versions you support here. In particular, ensure
   # that you indicate you support Python 3. These classifiers are *not*
