--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -7,6 +7,8 @@ prune logo
 prune scripts
 prune tests
 
+include src/vois/vuetify/extra/file_input.vue
+
 exclude src/vois/.gitignore
 exclude src/vois/.gitkeep
 
