--- a/pyproject.toml
+++ b/pyproject.toml
@@ -115,6 +115,7 @@ dependencies = [ # Optional
   "ipywidgets >= 8.0.0",
   "requests >= 2.28.0",
   "urllib3 >= 1.26.0",
+  "sphinx-copybutton",
   "ipykernel",
   "pandas",
   "ipyvuetify",
