--- a/pyproject.toml
+++ b/pyproject.toml
@@ -112,10 +112,10 @@ classifiers = [  # Optional
 dependencies = [ # Optional
   "Pillow >= 9.4.0",
   "traitlets >= 5.9.0",
-  "ipywidgets >= 8.0.0",
+  "ipywidgets >= 7.7.0",
   "requests >= 2.28.0",
   "urllib3 >= 1.26.0",
-  "sphinx-copybutton",
+  #"sphinx-copybutton",
   "ipykernel",
   "pandas",
   "ipyvuetify",
