Update gitignore load_local_vois to hide real path

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .ipynb_checkpoints/
 __pycache__/
 .idea/
-development/.ipynb_checkpoints
+src/vois/development/.ipynb_checkpoints
+src/vois/development/load_local_vois.py
 /tests/ui/test_results/
