--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .ipynb_checkpoints/
 __pycache__/
 .idea/
+dist/
 deploy/
 src/vois/development/.ipynb_checkpoints
 src/vois/development/load_local_vois.py
