--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,8 +9,9 @@ sphinx:
   fail_on_warning: false
 
 python:
-  # Install our python package before building the docs
+  version: 3.11
   install:
+    - requirements: docs/requirements.txt
     - method: pip
       path: .
 
