Changed python version in .readthedocs.yaml

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ deploy/
 src/vois/development/.ipynb_checkpoints
 src/vois/development/load_local_vois.py
 /tests/ui/test_results/
+requirements.txt
+src/vois/geo/
+src/vois.egg-info/
