--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,6 +8,9 @@ build:
 sphinx:
   fail_on_warning: false
 
+  # Path to your Sphinx configuration file.
+  configuration: docs/conf.py
+
 python:
   install:
     - requirements: docs/requirements.txt
