--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ name = "vois"  # Required
 #
 # For a discussion on single-sourcing the version, see
 # https://packaging.python.org/guides/single-sourcing-package-version/
-version = "1.0.39"  # Required   # Remember to update also __version__ in src/vois/__init__.py!!!!
+version = "1.0.40"  # Required   # Remember to update also __version__ in src/vois/__init__.py!!!!
 
 # This is a one-line description or tagline of what your project does. This
 # corresponds to the "Summary" metadata field:
@@ -49,7 +49,8 @@ requires-python = ">=3.9"
 # This is either text indicating the license for the distribution, or a file
 # that contains the license
 # https://packaging.python.org/en/latest/specifications/core-metadata/#license
-license = {file = "LICENCE"}
+license = "EUPL-1.2"
+license-files = ["LICENCE"]
 
 # This field adds keywords for your project which will appear on the
 # project page. What does your project relate to?
@@ -86,9 +87,6 @@ classifiers = [  # Optional
   # Indicate who your project is intended for
   "Intended Audience :: Developers",
   "Topic :: Software Development :: Build Tools",
-
-  # Pick your license as you wish
-  "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
 
   # Specify the Python versions you support here. In particular, ensure
   # that you indicate you support Python 3. These classifiers are *not*
